@@ -1,37 +1,54 @@
 package pl.atom.atomes.eventstore.memory;
 
+import pl.atom.atomes.aggregate.DomainEvent;
+import pl.atom.atomes.eventstore.EventMapper;
 import pl.atom.atomes.eventstore.EventStore;
 import pl.atom.atomes.eventstore.PersistentEvent;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class InMemoryEventStore implements EventStore {
 
     private final Map<UUID, List<PersistentEvent>> store = new HashMap<>();
 
     @Override
-    public List<PersistentEvent> getAggregateEvents(UUID aggregateId) {
-        return store.getOrDefault(aggregateId, new ArrayList<>());
+    public List<DomainEvent> getAggregateDomainEvents(UUID aggregateId, EventMapper mapper) {
+        return store.getOrDefault(aggregateId, new ArrayList<>())
+                .stream()
+                .map(mapper::toDomainEvent)
+                .toList();
     }
 
     @Override
-    public List<PersistentEvent> getAggregateEvents(UUID aggregateId, Long fromVersion) {
-        return getAggregateEvents(aggregateId)
+    public List<DomainEvent> getAggregateDomainEvents(UUID aggregateId, Long fromVersion, EventMapper mapper) {
+        return store.getOrDefault(aggregateId, new ArrayList<>())
                 .stream()
                 .filter(event -> event.version() > fromVersion)
-                .collect(Collectors.toList());
+                .map(mapper::toDomainEvent)
+                .toList();
     }
 
     @Override
-    public void save(PersistentEvent event) {
-        List<PersistentEvent> events = getAggregateEvents(event.aggregateId());
+    public void save(DomainEvent event, EventMapper mapper) {
+        save(mapper.toPersistentEvent(event));
+    }
+
+    @Override
+    public void save(List<DomainEvent> pendingEvents, EventMapper mapper) {
+        save(pendingEvents
+                .stream()
+                .map(mapper::toPersistentEvent)
+                .toList()
+        );
+    }
+
+    private void save(PersistentEvent event) {
+        List<PersistentEvent> events = store.getOrDefault(event.aggregateId(), new ArrayList<>());
         events.add(event);
         store.put(event.aggregateId(), events);
     }
 
-    @Override
-    public void save(List<PersistentEvent> pendingEvents) {
+    private void save(List<PersistentEvent> pendingEvents) {
         pendingEvents.forEach(this::save);
     }
 }
